--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Projeto Terminus",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "data": "node ./src/scripts/data-script.js"
   },
   "keywords": [],
   "author": "",
